--- a/angular.json
+++ b/angular.json
@@ -6,7 +6,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "calculateRoot": {
+    "findRoots": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -16,7 +16,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/calculateRoot",
+            "outputPath": "dist/findRoots",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -69,18 +69,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "calculateRoot:build"
+            "browserTarget": "findRoots:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "calculateRoot:build:production"
+              "browserTarget": "findRoots:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "calculateRoot:build"
+            "browserTarget": "findRoots:build"
           }
         },
         "test": {
@@ -117,11 +117,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "calculateRoot:serve"
+            "devServerTarget": "findRoots:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "calculateRoot:serve:production"
+              "devServerTarget": "findRoots:serve:production"
             }
           }
         },
